kubernetes/ingress/strip-api-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: development-bank-app
spec:
  stripPrefix:
    prefixes:
      - /api
