kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: bank.local
    http:
      paths:
      - path: /(.*)
        pathType: (/|$)(.*)
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api(/|$)(.*)
        pathType: (/|$)(.*)
        backend:
          service:
            name: backend-service
            port:
              number: 8000
